fixed image size on tablet

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -59,7 +59,7 @@
 
         &__image {
             object-fit: cover;
-            width: 90%;
+            width: 100%;
             height: auto;
             align-self: center;
             padding-top: 2 * vars.$gutter;
